hphp/hack/test/typecheck/foreach_vector.php.exp
File "foreach_vector.php", line 21, characters 10-13:
Typing error (Typing[4110])
  File "foreach_vector.php", line 21, characters 10-17:
  Expected `num` because this is used in an arithmetic operation
  File "foreach_vector.php", line 18, characters 19-21:
  But got `Foo`
  File "collections/Vector.hhi", line 48, characters 52-53:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 573, characters 25-26:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 304, characters 27-28:
    via this generic `Tv`
  File "interfaces.hhi", line 115, characters 23-24:
    via this generic `Tv`
  File "interfaces.hhi", line 92, characters 66-67:
    via this generic `Tv`
